<resources>
    <string name="app_name">Prosesa Manager</string>
    <string name="welcome">Welcome to Prosesa Manager Tool</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_logout">LOGOUT</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_usr">User</string>
    <string name="lbl_psw">Password</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="lbl_addEmployee">Add Employee</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_secondName">Second Name</string>
    <string name="lbl_lastName">Last Name</string>
    <string name="lbl_secondLastName">Second Last Name</string>
    <string name="lbl_user">User</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_dob">DOB</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_position">Position</string>
    <string name="txt_name">Employee\'s name</string>
    <string name="txt_secondName">Second name</string>
    <string name="txt_lastName">Last name</string>
    <string name="txt_secondLastName">Second last name</string>
    <string name="txt_user">User</string>
    <string name="txt_password">User\'s password</string>
    <string name="txt_confirmPassword">Confirm password</string>
    <string name="txt_age">Age</string>
    <string name="txt_dob">Date of birth</string>
    <string name="txt_company">Company</string>
    <string name="txt_position">Position</string>

</resources>
