<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prosesamanager.login"
    android:background="@drawable/bck1"
    >
    <TextView
        android:id="@+id/lbl_psw"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/lbl_user"
        android:layout_alignParentStart="true"
        android:text="@string/lbl_psw"/>
    <TextView
        android:id="@+id/lbl_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_user"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_usr"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/lbl_welcome"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lbl_psw"
        android:layout_marginTop="80dp"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cancel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:onClick="exitApp"/>


    <EditText
        android:id="@+id/txt_user"
        android:hint="Enter the username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignBaseline="@+id/lbl_user"
        android:layout_alignBottom="@+id/lbl_user"
        android:layout_alignStart="@+id/txt_password"
        android:layout_alignEnd="@+id/txt_password"
        android:textColorHint="@color/grayTransparent" />

    <EditText
        android:id="@+id/txt_password"
        android:hint="Enter the password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignBaseline="@+id/lbl_psw"
        android:layout_alignBottom="@+id/lbl_psw"
        android:layout_toEndOf="@+id/lbl_psw"
        android:layout_marginStart="18dp"
        android:textColorHint="@color/grayTransparent" />


</RelativeLayout>
